# forecastly

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .test_prophet.py  .tmp_check.py  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.streamlit  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SESSION_IMPROVEMENTS_v1.5.md  alembic.ini  cli.py  docker-compose.dev.yml  docker-compose.yml  healthcheck.py  install-vscode-extensions.sh  pyproject.toml  requirements.txt  run.bat  run.sh  run_demo.bat  run_demo.sh
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 001_add_performance_indexes.py
configs/: model.yaml  paths.yaml
data/: forecastly.db
docs/: api.md  cli.md  database_indexes.md
examples/: README.md  curl_examples.sh  javascript_example.js  python_example.py
migrations/: 001_add_account_lockout_fields.sql  002_add_security_audit_log.sql  apply_migrations.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: backup.sh  deploy.sh  setup.sh
src/: __version__.py  main.py  py.typed
src/api/: admin_router.py  app.py  data_router.py  exceptions.py  jobs_router.py  middleware.py  schemas.py
src/auth/: __init__.py  audit.py  dependencies.py  mfa.py  oauth2.py  oauth2_router.py  router.py  schemas.py  security.py
src/db/: __init__.py  crud.py  database.py  init_db.py  models.py
src/etl/: abc_xyz.py  clean_data.py  create_synthetic.py  feature_builder.py  load_data.py  prepare_dataset.py  validate.py
src/etl/quality/: __init__.py  checks.py  drift.py  validators.py
src/jobs/: __init__.py  queue.py  types.py  worker.py
src/models/: evaluate.py  predict.py  train_lgbm.py  train_lightgbm.py  train_prophet.py  train_xgboost.py
src/monitoring/: __init__.py  metrics.py
src/ui/: dashboard.py
src/ui/pages/: 1_Обзор.py  2_Прогноз.py  3_Метрики.py
src/utils/: config.py  helpers.py  logger.py  types.py
tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_crud.py  test_etl.py  test_helpers.py  test_model.py  test_monitoring.py  test_quality.py  test_security.py
